feat: add text-align

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <p>
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Recusandae veritatis quod reprehenderit quis, repudiandae quisquam laudantium voluptate aspernatur rerum temporibus magnam dicta consequuntur? Placeat ea laborum enim id laboriosam aspernatur!
-    </p>
+   <p>
+    Il mio sito web è veramente bello!
+   </p>
 </body>
 </html>
