--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <h1>Il mio sito web</h1>
+    <h2>A lezione di informatica</h2>
+    <h3>Impariamo a programmare!</h3>
 </body>
 </html>
