add background-color to h5

--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
     <h1>Il mio sito web</h1>
     <h2>A lezione di informatica</h2>
     <h3>Impariamo a programmare!</h3>
+    <h4>Modulo html</h4>
+    <h5 id="color">Modulo CSS</h5>
 </body>
 </html>
