--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Il mio sito web</h1>
-    <h2>A lezione di informatica</h2>
-    <h3>Impariamo a programmare!</h3>
-    <h4>Modulo html</h4>
-    <h5 id="color">Modulo CSS</h5>
+    <h1 class="size">Il mio sito web</h1>
+    <article class="size">A lezione di latino</article>
+    <p class="size">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+        Repellendus, nesciunt repudiandae, natus, facilis recusandae ullam perferendis consequatur 
+        aut vitae fugit expedita officiis et esse in inventore molestias unde. Eum, magni? </p>
+    <footer class="size">Contatti copyright</footer>
 </body>
 </html>
