feat: add multiple class selector

--- a/index.html
+++ b/index.html
@@ -7,11 +7,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 class="size">Il mio sito web</h1>
-    <article class="size">A lezione di latino</article>
-    <p class="size">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-        Repellendus, nesciunt repudiandae, natus, facilis recusandae ullam perferendis consequatur 
-        aut vitae fugit expedita officiis et esse in inventore molestias unde. Eum, magni? </p>
-    <footer class="size">Contatti copyright</footer>
+    <p class="text-red size style family">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi similique corporis, voluptatum eos sequi accusantium et dolores nemo ea! Et odio, maxime soluta provident deserunt fuga recusandae ea molestiae sed.</p>
 </body>
 </html>
