--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <p class="text-red size style family">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi similique corporis, voluptatum eos sequi accusantium et dolores nemo ea! Et odio, maxime soluta provident deserunt fuga recusandae ea molestiae sed.</p>
+    <h1>Corso di latino</h1>
+    <div>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias cupiditate ipsa blanditiis a soluta nam, amet aliquid officia aperiam dolorem. Illo neque provident nam aliquam impedit rerum iure eius fugiat!</p>
+    </div>
+    <div>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium reprehenderit illum explicabo, tempora voluptas vero animi modi dolorum mollitia molestias accusantium veritatis dolore eveniet optio id recusandae error. Quisquam, perspiciatis.</p>
+    </div>
+    
+   <footer>copyright</footer>
+    
 </body>
 </html>
