add same rule css for multiple elements

--- a/index.html
+++ b/index.html
@@ -7,15 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Corso di latino</h1>
-    <div>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias cupiditate ipsa blanditiis a soluta nam, amet aliquid officia aperiam dolorem. Illo neque provident nam aliquam impedit rerum iure eius fugiat!</p>
-    </div>
-    <div>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium reprehenderit illum explicabo, tempora voluptas vero animi modi dolorum mollitia molestias accusantium veritatis dolore eveniet optio id recusandae error. Quisquam, perspiciatis.</p>
-    </div>
-    
-   <footer>copyright</footer>
+    <h1 class="background">Corso di latino</h1>
+    <h2 class="background">Testo di Cicerone</h2>
+    <p class="background">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias cupiditate ipsa blanditiis a soluta nam, amet aliquid officia aperiam dolorem. Illo neque provident nam aliquam impedit rerum iure eius fugiat!</p>
     
 </body>
 </html>
