feat: add a:hover

--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 class="background">Corso di latino</h1>
-    <h2 class="background">Testo di Cicerone</h2>
-    <p class="background">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias cupiditate ipsa blanditiis a soluta nam, amet aliquid officia aperiam dolorem. Illo neque provident nam aliquam impedit rerum iure eius fugiat!</p>
+    <a href="#">Link</a>
     
 </body>
 </html>
