feat: add red color rgb

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <a href="#">Link</a>
+   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, obcaecati. Voluptatum tenetur, officia magnam sit dolor, natus facere vero nesciunt vel esse error doloremque impedit obcaecati quia et? Quos, quae.</p>
+    
     
 </body>
 </html>
