--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, obcaecati. Voluptatum tenetur, officia magnam sit dolor, natus facere vero nesciunt vel esse error doloremque impedit obcaecati quia et? Quos, quae.</p>
+    <ul>
+        <li>Acqua</li>
+        <li>Pane</li>
+        <li>Zucchero</li>
+        <li>Sale</li>
+        <li>Frutta</li>
+    </ul>
     
     
 </body>
