feat: add red color rgba

--- a/index.html
+++ b/index.html
@@ -7,13 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <ul>
-        <li>Acqua</li>
-        <li>Pane</li>
-        <li>Zucchero</li>
-        <li>Sale</li>
-        <li>Frutta</li>
-    </ul>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aspernatur consequuntur culpa cupiditate ipsa. Possimus modi necessitatibus perspiciatis facere ad provident dolorem laborum ullam nesciunt tempora aliquam veniam, alias laboriosam velit.</p>
     
     
 </body>
