feat: add inline-block

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="padd">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-        Pariatur blanditiis facere, perspiciatis magnam, modi nemo illum sunt eligendi rem maiores repellat 
-        fugiat facilis totam voluptatibus possimus quasi expedita reprehenderit quae!
-    </div>
+    <ul>
+        <li>Pane</li>
+        <li>Acqua</li>
+        <li>Sale</li>
+    </ul>
 </body>
 </html>
