feat: add inline, inline-block and block

--- a/index.html
+++ b/index.html
@@ -7,10 +7,24 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <ul>
-        <li>Pane</li>
-        <li>Acqua</li>
-        <li>Sale</li>
-    </ul>
+    <div>
+<p>
+    Lorem ipsum dolor sit, <span class="first">amet consectetur adipisicing elit.</span>
+    Sit sequi vero consequuntur quibusdam quaerat, aliquid ad minima veritatis quae!
+    Harum beatae quo molestias neque doloremque molestiae voluptas culpa pariatur optio.
+<br>
+    Lorem ipsum dolor sit, <span class="second">amet consectetur adipisicing elit.</span>
+    Sit sequi vero consequuntur quibusdam quaerat, aliquid ad minima veritatis quae!
+    Harum beatae quo molestias neque doloremque molestiae voluptas culpa pariatur optio.
+<br>
+    Lorem ipsum dolor sit, <span class="third">amet consectetur adipisicing elit.</span>
+    Sit sequi vero consequuntur quibusdam quaerat, aliquid ad minima veritatis quae!
+    Harum beatae quo molestias neque doloremque molestiae voluptas culpa pariatur optio.
+    
+</p>
+
+
+
+    </div>
 </body>
 </html>
