--- a/index.html
+++ b/index.html
@@ -7,24 +7,39 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div>
-<p>
-    Lorem ipsum dolor sit, <span class="first">amet consectetur adipisicing elit.</span>
-    Sit sequi vero consequuntur quibusdam quaerat, aliquid ad minima veritatis quae!
-    Harum beatae quo molestias neque doloremque molestiae voluptas culpa pariatur optio.
-<br>
-    Lorem ipsum dolor sit, <span class="second">amet consectetur adipisicing elit.</span>
-    Sit sequi vero consequuntur quibusdam quaerat, aliquid ad minima veritatis quae!
-    Harum beatae quo molestias neque doloremque molestiae voluptas culpa pariatur optio.
-<br>
-    Lorem ipsum dolor sit, <span class="third">amet consectetur adipisicing elit.</span>
-    Sit sequi vero consequuntur quibusdam quaerat, aliquid ad minima veritatis quae!
-    Harum beatae quo molestias neque doloremque molestiae voluptas culpa pariatur optio.
-    
-</p>
-
-
-
+    <div class="header">
+        <h1>Header</h1>
     </div>
-</body>
-</html>
+    <div class="topnav">
+        <a href="#">Link</a>
+        <a href="#">Link</a>
+        <a href="#">Link</a>
+    </div>
+    <div class="row">
+        <div class="column side">
+            <h2>Side</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit..</p>
+        </div>
+        <div class="column middle">
+            <h2>Main Content</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                Repellat, quam similique vitae nemo modi quidem, neque asperiores quaerat nostrum amet 
+                iusto minima molestias veniam adipisci accusamus consectetur necessitatibus itaque? Corrupti.
+                Quisque vehicula, risus eget aliquam placerat, purus leo tincidunt eros, eget luctus quam orci in 
+                velit. Praesent scelerisque tortor sed accumsan convallis.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Repellat, quam similique vitae nemo modi quidem, neque asperiores quaerat nostrum amet 
+                    iusto minima molestias veniam adipisci accusamus consectetur necessitatibus itaque? Corrupti.
+                    Quisque vehicula, risus eget aliquam placerat, purus leo tincidunt eros, eget luctus quam orci in 
+                    velit. Praesent scelerisque tortor sed accumsan convallis.</p>
+                </div>
+                <div class="column side">
+                    <h2>Side</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit..</p>
+                </div>
+            </div>
+            <div class="footer">
+                <p>Footer</p>
+            </div>
+        </body>
+        </html>
