feat: add display:none

--- a/index.html
+++ b/index.html
@@ -7,39 +7,17 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="header">
-        <h1>Header</h1>
+    <div>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+            Ut minima porro aliquam a reprehenderit facere debitis maiores dolorum, 
+            numquam quibusdam excepturi rem voluptatibus illo ipsa dicta beatae, provident assumenda ipsam?
+        </p>
+        <p class="none">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+            Quo fuga quisquam praesentium nostrum, quasi obcaecati architecto et, quidem, 
+            expedita tempora perspiciatis! In reiciendis ipsa hic eveniet eligendi officia, nemo quod.
+        </p>
     </div>
-    <div class="topnav">
-        <a href="#">Link</a>
-        <a href="#">Link</a>
-        <a href="#">Link</a>
-    </div>
-    <div class="row">
-        <div class="column side">
-            <h2>Side</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit..</p>
-        </div>
-        <div class="column middle">
-            <h2>Main Content</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                Repellat, quam similique vitae nemo modi quidem, neque asperiores quaerat nostrum amet 
-                iusto minima molestias veniam adipisci accusamus consectetur necessitatibus itaque? Corrupti.
-                Quisque vehicula, risus eget aliquam placerat, purus leo tincidunt eros, eget luctus quam orci in 
-                velit. Praesent scelerisque tortor sed accumsan convallis.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                    Repellat, quam similique vitae nemo modi quidem, neque asperiores quaerat nostrum amet 
-                    iusto minima molestias veniam adipisci accusamus consectetur necessitatibus itaque? Corrupti.
-                    Quisque vehicula, risus eget aliquam placerat, purus leo tincidunt eros, eget luctus quam orci in 
-                    velit. Praesent scelerisque tortor sed accumsan convallis.</p>
-                </div>
-                <div class="column side">
-                    <h2>Side</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit..</p>
-                </div>
-            </div>
-            <div class="footer">
-                <p>Footer</p>
-            </div>
-        </body>
-        </html>
+</body>
+</html>
