feat: add float

--- a/index.html
+++ b/index.html
@@ -8,16 +8,12 @@
 </head>
 <body>
     <div>
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-            Ut minima porro aliquam a reprehenderit facere debitis maiores dolorum, 
-            numquam quibusdam excepturi rem voluptatibus illo ipsa dicta beatae, provident assumenda ipsam?
-        </p>
-        <p class="none">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-            Quo fuga quisquam praesentium nostrum, quasi obcaecati architecto et, quidem, 
-            expedita tempora perspiciatis! In reiciendis ipsa hic eveniet eligendi officia, nemo quod.
-        </p>
+     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+        Sapiente doloremque numquam similique voluptatem totam illo ut, itaque soluta, 
+        repellendus dicta consequatur. Doloremque incidunt, voluptas inventore dolorum eius illum corporis libero!</p>
+    </div>
+    <div>
+        <img class="img" src="deadpool.png" alt="">
     </div>
 </body>
 </html>
