feat: add clear

--- a/index.html
+++ b/index.html
@@ -8,12 +8,18 @@
 </head>
 <body>
     <div>
-     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-        Sapiente doloremque numquam similique voluptatem totam illo ut, itaque soluta, 
-        repellendus dicta consequatur. Doloremque incidunt, voluptas inventore dolorum eius illum corporis libero!</p>
-    </div>
-    <div>
-        <img class="img" src="deadpool.png" alt="">
-    </div>
-</body>
-</html>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+            Sapiente doloremque numquam similique voluptatem totam illo ut, itaque soluta, 
+            repellendus dicta consequatur. Doloremque incidunt, voluptas inventore dolorum eius illum corporis libero!</p>
+        </div>
+        <div>
+            <img class="img" src="deadpool.png" alt="">
+        </div>  
+        <div>
+            <p class="clear">Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+                Tempore perspiciatis temporibus laborum! Enim quisquam, repudiandae ullam voluptatibus, 
+                incidunt libero, harum unde accusantium fugiat ipsum maiores? Minus cupiditate quisquam sed a.</p>
+            </div>
+            
+        </body>
+        </html>
