feat: add columns

--- a/index.html
+++ b/index.html
@@ -7,19 +7,19 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-            Sapiente doloremque numquam similique voluptatem totam illo ut, itaque soluta, 
-            repellendus dicta consequatur. Doloremque incidunt, voluptas inventore dolorum eius illum corporis libero!</p>
-        </div>
-        <div>
-            <img class="img" src="deadpool.png" alt="">
-        </div>  
-        <div>
-            <p class="clear">Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
-                Tempore perspiciatis temporibus laborum! Enim quisquam, repudiandae ullam voluptatibus, 
-                incidunt libero, harum unde accusantium fugiat ipsum maiores? Minus cupiditate quisquam sed a.</p>
-            </div>
-            
-        </body>
-        </html>
+    <div class="container">
+        <h2>Paragrafo 1</h2>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+            Recusandae consectetur quibusdam quasi! Voluptas quisquam quos dolorem vitae sit, 
+            totam praesentium assumenda eius, voluptatem nisi accusamus architecto sequi consequuntur id nemo.</p>
+            <h2>Paragrafo 2</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Necessitatibus, et! 
+                Nesciunt minima temporibus, quisquam, sint quibusdam placeat consequatur tempore natus, 
+                beatae fuga unde exercitationem quas ut doloremque alias culpa eaque!</p>
+                <h2>Paragrafo 3</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                    Cum porro tenetur eos labore autem nihil et sequi, voluptatibus repellat at. 
+                    Quod mollitia cum odio eaque reiciendis eius quis iste temporibus.</p>
+                </div>
+            </body>
+            </html>
