feat: add sticky

--- a/index.html
+++ b/index.html
@@ -7,19 +7,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <h2>Paragrafo 1</h2>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-            Recusandae consectetur quibusdam quasi! Voluptas quisquam quos dolorem vitae sit, 
-            totam praesentium assumenda eius, voluptatem nisi accusamus architecto sequi consequuntur id nemo.</p>
-            <h2>Paragrafo 2</h2>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Necessitatibus, et! 
-                Nesciunt minima temporibus, quisquam, sint quibusdam placeat consequatur tempore natus, 
-                beatae fuga unde exercitationem quas ut doloremque alias culpa eaque!</p>
-                <h2>Paragrafo 3</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-                    Cum porro tenetur eos labore autem nihil et sequi, voluptatibus repellat at. 
-                    Quod mollitia cum odio eaque reiciendis eius quis iste temporibus.</p>
-                </div>
-            </body>
-            </html>
+    <div class="topnav">
+        <a href="#">Link</a>
+        <a href="#">Link</a>
+        <a href="#">Link</a>
+    </div>
+    <div>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+            Recusandae quibusdam placeat odit tenetur? Molestias dolor esse expedita sunt harum sint, 
+            quaerat minima recusandae officiis necessitatibus magnam ratione, omnis eius cupiditate.</p>
+    </div>
+</body>
+</html>
