feat: add bottom

--- a/index.html
+++ b/index.html
@@ -7,15 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="topnav">
-        <a href="#">Link</a>
-        <a href="#">Link</a>
-        <a href="#">Link</a>
-    </div>
-    <div>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
-            Recusandae quibusdam placeat odit tenetur? Molestias dolor esse expedita sunt harum sint, 
-            quaerat minima recusandae officiis necessitatibus magnam ratione, omnis eius cupiditate.</p>
-    </div>
+   
+    <footer>Footer</footer>
+   
 </body>
 </html>
