--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   
-    <footer>Footer</footer>
-   
+    <div class="div1">
+        <p>ciao a tutti</p>
+    </div>
 </body>
 </html>
