--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="div1">
+    <div>
+        <p class="font">Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+            Quasi voluptatum odit totam ullam, at cum deserunt pariatur consequuntur explicabo error 
+            numquam aperiam excepturi doloribus quisquam sunt suscipit ipsa. Obcaecati, repellendus?</p>
+            <p class="size">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                Id vel quidem inventore eveniet sequi quis aliquid harum modi ad. 
+                Quos omnis numquam corrupti et modi nulla veniam similique cupiditate sint.</p>
     </div>
 </body>
 </html>
