--- a/index.html
+++ b/index.html
@@ -8,12 +8,15 @@
 </head>
 <body>
     <div>
-        <p class="font">Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+        <h1>Il mio sito</h1>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
             Quasi voluptatum odit totam ullam, at cum deserunt pariatur consequuntur explicabo error 
             numquam aperiam excepturi doloribus quisquam sunt suscipit ipsa. Obcaecati, repellendus?</p>
-            <p class="size">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                 Id vel quidem inventore eveniet sequi quis aliquid harum modi ad. 
                 Quos omnis numquam corrupti et modi nulla veniam similique cupiditate sint.</p>
     </div>
+    <footer>Contatti</footer>
+
 </body>
 </html>
