feat: add card div

--- a/index.html
+++ b/index.html
@@ -7,16 +7,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div>
-        <h1>Il mio sito</h1>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-            Quasi voluptatum odit totam ullam, at cum deserunt pariatur consequuntur explicabo error 
-            numquam aperiam excepturi doloribus quisquam sunt suscipit ipsa. Obcaecati, repellendus?</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                Id vel quidem inventore eveniet sequi quis aliquid harum modi ad. 
-                Quos omnis numquam corrupti et modi nulla veniam similique cupiditate sint.</p>
+    <h2>Card</h2>
+    <div class="image-container" class="card">
+        <img src="immagine_avatar.png" alt="Avatar">
+        <span class="close-btn">X</span>
+        <div class="container">
+            <h4>Jane Doe</h4>
+            <p>Interior Designer</p>
+        </div>
     </div>
-    <footer>Contatti</footer>
 
 </body>
 </html>
