fix: add columns

--- a/index.html
+++ b/index.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h2>Card</h2>
-    <div class="image-container" class="card">
-        <img src="immagine_avatar.png" alt="Avatar">
-        <span class="close-btn">X</span>
-        <div class="container">
-            <h4>Jane Doe</h4>
-            <p>Interior Designer</p>
-        </div>
-    </div>
-
+  <div class="container">
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+      Sit, illum at culpa rerum amet, laborum laboriosam possimus consequuntur neque ut rem cupiditate, 
+      numquam excepturi dolore adipisci. Ipsum nisi omnis maxime.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+      Perspiciatis consequuntur modi repudiandae ea at dolorem similique totam nesciunt perferendis, 
+      sunt possimus nihil ratione debitis quia vitae nisi illum sed quod?</p>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+      Ad porro facilis quis fugit inventore, excepturi, ipsam voluptate iure, 
+      laboriosam voluptas autem quod ullam eligendi impedit dolorum expedita nisi sunt ducimus!</p>
+  </div>
 </body>
 </html>
