feat: add flexbox

--- a/index.html
+++ b/index.html
@@ -8,15 +8,10 @@
 </head>
 <body>
   <div class="container">
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-      Sit, illum at culpa rerum amet, laborum laboriosam possimus consequuntur neque ut rem cupiditate, 
-      numquam excepturi dolore adipisci. Ipsum nisi omnis maxime.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-      Perspiciatis consequuntur modi repudiandae ea at dolorem similique totam nesciunt perferendis, 
-      sunt possimus nihil ratione debitis quia vitae nisi illum sed quod?</p>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-      Ad porro facilis quis fugit inventore, excepturi, ipsam voluptate iure, 
-      laboriosam voluptas autem quod ullam eligendi impedit dolorum expedita nisi sunt ducimus!</p>
+    <div>item1</div>
+    <div>item2</div>
+    <div>item3</div>
   </div>
+  
 </body>
 </html>
