--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
   <div class="container">
-    <div>item1</div>
-    <div>item2</div>
-    <div>item3</div>
+    <div>item 1</div>
+    <div>item 2</div>
+    <div class="item3">item 3</div>
   </div>
   
 </body>
