--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div class="container">
     <div>item 1</div>
     <div class="item2">item 2</div>
-    <div>item 3</div>
+    <div class="item3">item 3</div>
   </div>
   
 </body>
