--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
     <div>5</div>
     <div>6</div>
     <div>7</div>
-    <div>8</div>
-    <div>9</div>
+    <div class="union">8-9</div>
     <div>10</div>
   </div>
   
