--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 </head>
 <body>
   <div class="grid-container">
-    <div class="union">1-4</div>
+    <div>1</div>
     <div>2</div>
     <div>3</div>
+    <div>4</div>
     <div>5</div>
     <div>6</div>
     <div>7</div>
