--- a/index.html
+++ b/index.html
@@ -7,7 +7,28 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="viewport"></div>
-  
+  <div class="calculator-container">
+    <div class="span">0</div>
+  <div class="center">C</div>
+  <div class="center">(</div>
+  <div class="center">)</div>
+  <div class="center">+</div>
+  <div class="center">1</div>
+  <div class="center">2</div>
+  <div class="center">3</div>
+  <div class="center">-</div>
+  <div class="center">4</div>
+  <div class="center">5</div>
+  <div class="center">6</div>
+  <div class="center">x</div>
+  <div class="center">7</div>
+  <div class="center">8</div>
+  <div class="center">9</div>
+  <div class="center">/</div>
+  <div class="center">%</div>
+  <div class="center">0</div>
+  <div class="center">,</div>
+  <div class="center">=</div>
+</div>
 </body>
 </html>
