--- a/modulo_sass/index.html
+++ b/modulo_sass/index.html
@@ -8,11 +8,14 @@
 </head>
 <body>
     <div>
-        <h1 class="title-1">A lezione di latino</h1>
-        <p class="text-latin">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-            Praesentium fuga inventore dolores nemo laboriosam assumenda atque a. 
-            Distinctio temporibus modi architecto nobis voluptatem maiores optio quod corrupti, vel harum sapiente.</p>
+        <nav>
+            <ul>
+            <li><a href="home">Home</a></li>
+            <li><a href="blog">Blog</a></li>
+            <li><a href="About">About</a></li>
+            <li class="last-item"><a href="Contact" class="contact">Contact</a></li>
+            </ul>
+                </nav>
     </div>
-   
 </body>
 </html>
