feat: add containers

--- a/modulo_sass/index.html
+++ b/modulo_sass/index.html
@@ -8,14 +8,24 @@
 </head>
 <body>
     <div>
-        <nav>
-            <ul>
+        <nav class="navbar">
+            <ul class="navbar-menu" >
             <li><a href="home">Home</a></li>
             <li><a href="blog">Blog</a></li>
             <li><a href="About">About</a></li>
-            <li class="last-item"><a href="Contact" class="contact">Contact</a></li>
+            <li><a href="Contact">Contact</a></li>
             </ul>
                 </nav>
+    </div>
+    <div class=container-1>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+            Ullam minima iusto dicta dignissimos nam culpa, dolores eligendi delectus maxime fugiat veniam. 
+            Eaque amet ullam error laborum maiores sapiente quidem ea!</p>
+    </div>
+    <div class="container-2">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+            Est error numquam deserunt ex, obcaecati, ullam quaerat corrupti qui nemo ab doloribus, 
+            eveniet totam suscipit voluptate? Sint tempore quam esse sunt.</p>
     </div>
 </body>
 </html>
