--- a/modulo_sass/index.html
+++ b/modulo_sass/index.html
@@ -7,15 +7,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   <div class="navbar dark">
-    <!-- Aggiungi la classe 'dark' per il tema scuro -->
-     <!-- Quando vuoi applicare il tema chiaro, basta rimuovere la classe dark dalla navbar -->
-<div class="nav-links">
-    <a href="#">Home</a>
-    <a href="#">Blog</a>
-    <a href="#">About</a>
-    <a href="#">Contact</a>
-</div>
-   </div>
+   <h1>ciao a tutti</h1>
 </body>
 </html>
