feat: add if and else

--- a/modulo_sass/index.html
+++ b/modulo_sass/index.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   <h1>ciao a tutti</h1>
+    <div class="navbar">
+    <div class="navbar-item">
+        <a href="#">Home</a>
+        <a href="#">Blog</a>
+        <a href="#">About</a>
+        <a href="#">Contact</a>
+    </div>
+       </div>
 </body>
 </html>
