--- a/modulo_sass/index.html
+++ b/modulo_sass/index.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="navbar">
-    <div class="navbar-item">
-        <a href="#">Home</a>
+    <div>
+    <div>
+        <a href="#" class="navbar-item">Home</a>
         <a href="#">Blog</a>
         <a href="#">About</a>
         <a href="#">Contact</a>
