fix: add function

--- a/modulo_sass/index.html
+++ b/modulo_sass/index.html
@@ -7,13 +7,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div>
-    <div>
-        <a href="#" class="navbar-item">Home</a>
-        <a href="#">Blog</a>
-        <a href="#">About</a>
-        <a href="#">Contact</a>
-    </div>
-       </div>
+    <h1>ciao a tutti</h1>
 </body>
 </html>
