--- a/modulo_sass/index.html
+++ b/modulo_sass/index.html
@@ -7,19 +7,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container-1">
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-            Possimus eveniet ducimus aut optio nihil, labore laborum cupiditate praesentium quaerat dolores? 
-            Labore id iusto tenetur tempore laborum aperiam voluptate nisi totam.
-        </p>
-    </div>
-    <div class="container-2">
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-            Amet repellat sit, ipsam fuga ex hic sapiente nihil corrupti quo quasi similique a, at sed.
-            Provident dolorum reiciendis perspiciatis eligendi porro?
-        </p>
-    </div>
+    <div>
+        <div>
+            <a href="#" class="navbar-item">Home</a>
+            <a href="#">Blog</a>
+            <a href="#">About</a>
+            <a href="#">Contact</a>
+            </div>
+            </div>
 </body>
 </html>
