--- a/modulo_sass/index.html
+++ b/modulo_sass/index.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div>
-        <div>
-            <a href="#" class="navbar-item">Home</a>
-            <a href="#">Blog</a>
-            <a href="#">About</a>
-            <a href="#">Contact</a>
-            </div>
-            </div>
+  <nav>
+    <ul>
+        <li class="nav-item-red">Home</li>
+        <li class="nav-item-green">Blog</li>
+        <li class="nav-item-blue">About</li>
+        <li class="nav-item-orange">Contact</li>
+    </ul>
+  </nav>
 </body>
 </html>
